# hivemind

./: .dockerignore  .env-example  .gitattributes  .gitignore  .gitlab-ci-docker.yaml  .gitlab-ci-ssh.yaml  .gitlab-ci.yaml  .gitlab-ci.yml  .gitmodules  CLAUDE.md  Dockerfile  Dockerfile.rewriter  Makefile  Pipfile  README.md  REPORT.md  \  alembic.ini  build.py  build.sh  check-hivemind-pipeline.sh  docker-compose-ci.yml  docker-compose.yml  hive_sync.pid  mock_block_data_example.json  mock_db.sh  mock_vops_data_example.json  new_requierements.txt  postgres.auto.conf  postgrest.conf  pyproject.toml  query_hivemind_capture_times.sh  require.txt  requirements.txt  requirements_prod.txt  rewrite_rules.conf  run_hivemind.sh  run_hivemind_test_queries.sh  run_server_sync.sh  run_tests.sh  (+5 more)
.github/: codeql-config.yml
.github/workflows/: codeql-analysis.yml
alembic/versions/: bf9df12d4f01_jsalyers_update_some_indexes.py
docker/: block-processing-healthcheck.sh  docker-compose-sync.yml  docker-compose-test.yml  docker_entrypoint.sh  hivemind_nginx.conf.template  rewriter_entrypoint.sh
docs/: api-examples.md  communities.md  follows.md  follows_desc.md  massive-sync-optimizations.md  sql-vs-python-error-notifications.md
hive/: __init__.py  _version.py  cli.py  conf.py  signals.py  version.py
hive/db/: adapter.py  autoexplain_controller.py  db_state.py  schema.py
hive/indexer/: accounts.py  auto_db_disposer.py  block.py  blocks.py  cached_post.py  community.py  custom_op.py  db_adapter_holder.py  feed_cache.py  flusher.py  follow.py  follow_count.py  history.py  jobs.py  mentions.py  mock_block.py  mock_block_provider.py  mock_data_provider.py  mock_vops_provider.py  new_follow.py  notification_cache.py  notify.py  notify_type.py  payments.py  post_data_cache.py  post_rshares.py  post_subscription.py  posts.py  reblog.py  reputations.py  sync.py  tags.py  votes.py
hive/server/: context.py  db.py  serve.py
hive/steem/: blocks_provider.py  client.py  exceptions.py  http_client.py  massive_blocks_data_provider.py  signal.py  vops_provider.py
hive/utils/: account.py  communities_rank.py  json.py  misc.py  normalize.py  operation_extractor.py  payout_stats.py  post.py  post_active.py  profiler.py  stats.py  system.py  timer.py  trends.py  trends_batch_updater.py  unique_fifo.py
hivemind/: cli.py  conf.py
hivemind/db/: adapter.py  db_state.py
hivemind/indexer/: accounts.py  blocks.py  cached_post.py  community.py  custom_op.py  feed_cache.py  follow.py  jobs.py  notify.py  payments.py  posts.py  sync.py
hivemind/server/: db.py  serve.py
hivemind/steem/: client.py  http_client.py
hivemind/utils/: account.py  normalize.py  post.py  stats.py  timer.py
mock_data/unused/: mock_block_data_vops_prepare.json  mock_vops_data_vops_tests.json
openApi/: README.md  dredd.yml  openapi.yaml  openapi_all.yaml  package-lock.json  run_tests.sh
openApi/client/: README.md
openApi/schemas/: activeVotes.yaml  beneficiaries.yaml  currencyValue.yaml  errorMessage.yaml  rpcRequest.yaml
openApi/server/: setup.py
openApi/stubs/: README.md  setup.py
postgres/docker/: Dockerfile  postgresql.conf  run_db.sh
scripts/: accumulate_time_measurements.py  ci_start_api_benchmark.sh  ci_start_api_benchmarks.sh  ci_start_api_smoketest.sh  ci_start_server.sh  ci_stop_server.sh  ci_sync.sh  common.sh  csv_report_parser.py  db_rest.sh  drop_db.sh  install_app.sh  install_app.sql  json_report_parser.py  mocks_to_flow.py  openapi_rewrite.sh  operation_extractor.py  request_time_tools.py  run_benchmark.bash  run_full_sync_tests.sh  run_hivemind.sh  run_instance.sh  run_tests.sh  setup_db.sh  setup_db.sql  setup_postgres.sh  start_postgrest.sh  uninstall_app.sh  update_hivemind_db.sql  upgrade.sql  xml_report_parser.py
scripts/api_generation/: generate_hivemind_api_client.py  generate_hivemind_api_client.sh  pyproject.toml
scripts/ci/: add-mocks-to-db.sh  benchmark_generator.py  build.sh  build_and_publish_instance.sh  build_ci_base_image.sh  build_instance.sh  collect-db-stats.sh  create-db.sh  drop-db.sh  dump-db.sh  fix_ci_tag.sh  get-postgres-version.sh  hive-server.sh  hive-sync.sh  init-submodules.sh  inject_null_bytes_for_tests.sql  json_report_parser.py  publish_instance.sh  reload-postgrest-functions.sh  run_pytest_benchmark.py  setup_env.py  start-api-benchmark.sh  start-api-benchmarks.sh  start-api-smoketest.sh  start_api_benchmark.py  start_postgrest.sh  timer.sh  wait-for-postgres.sh  wrapper_for_app_next_block.sql
scripts/ci-helpers/: build_and_publish_instance.sh  build_instance.sh  dynamic-tag-pipeline.gitlab-ci.yml  includes.gitlab-ci.yml
scripts/db-monitoring/: .env_example  create_database.sql  docker-compose.yml  pghero_example.yml  readme-monitoring.md  setup_monitoring.sql  setup_template.sql
scripts/mock-helpers/: append_test_mocks.py  mocked_dev_ops.json
scripts/python_api_package/: generate_hivemind_api_client.py  generate_hivemind_api_client.sh  pyproject.toml
scripts/python_api_package/api_client_tests/: api_caller.py  api_collection.py  test_generated_api_client.py
scripts/python_api_package/hiveio_hivemind_api/: .gitignore
scripts/python_api_package/tests/: api_caller.py  api_collection.py  test_generated_api_client.py  test_package_import.py
scripts/tests/: dump_public_proc  join_test_account_operations  join_test_accounts  join_test_hive_accounts  join_test_hive_blocks  join_test_hive_category_data  join_test_hive_communities  join_test_hive_db_patch_level  join_test_hive_feed_cache  join_test_hive_mentions  join_test_hive_notification_cache  join_test_hive_notifs  join_test_hive_payments  join_test_hive_permlink_data  join_test_hive_post_data  join_test_hive_posts  join_test_hive_posts_api_helper  join_test_hive_reblogs  join_test_hive_reputation_data  join_test_hive_roles  join_test_hive_state  join_test_hive_subscriptions  join_test_hive_tag_data  join_test_hive_votes  readme.txt  table_test_save_to_db.sh  table_test_save_to_file.sh
tests/: CMakeLists.txt  txt
tests/benchmarks/: readme.txt
tests/manual_tests/: list_comments_by_permlink.py  (+6 more)
(+5793 files in other folders)
