[build-system]
requires = [
    "poetry-core>=1.7.0",
    "poetry-dynamic-versioning>=1.0.0,<2.0.0",
]
build-backend = "poetry_dynamic_versioning.backend"


[tool.poetry]
name = "hivemind"
version = "0.0.0"
description = "Developer-friendly microservice powering social networks on the Hive blockchain."
readme = "README.md"
repository = "https://gitlab.syncad.com/hive/hivemind"
authors = []
packages = [
    { include = "hive" },
]
include = [
    "settings.toml",
]
source = [
    { name = "PyPI", priority = "primary" },
    { name = "gitlab-wax", url = "https://gitlab.syncad.com/api/v4/projects/419/packages/pypi/simple", priority = "supplemental" }, # wax
    { name = "gitlab-schemas", url = "https://gitlab.syncad.com/api/v4/projects/362/packages/pypi/simple", priority = "supplemental" }, # schemas
]


[tool.poetry.dependencies]
python = "^3.8"
aiopg = "1.3.4"
jsonrpcserver = "4.2.0"
simplejson = "3.17.6"
aiohttp = "3.8.1"
certifi = "2022.6.15"
sqlalchemy = "1.4.49"
funcy = "1.17"
ujson = "5.4.0"
urllib3 = "1.26.10"
psycopg2-binary = "2.9.3"
aiocache = "0.11.1"
configargparse = "1.5.3"
diff-match-patch = "20200713"
prometheus-client = "0.14.1"
psutil = "5.9.1"
atomic = "0.7.3"
cffi = "1.14.5"
gitpython = "3.1.27"
pytz = "2022.1"


[tool.poetry.group.dev.dependencies]
pyYAML = "6.0"
prettytable = "3.3.0"
tox = "3.25.0"
black = "22.6.0"


[tool.poetry.scripts]
hive = "hive.cli:run"
mocker = "hive.indexer.mocking.populate_haf_with_mocked_data:main"


[tool.poetry-dynamic-versioning]
enable = true
format-jinja = """
    {%- set dirty_postfix = '.dirty' if dirty else '' -%}
    {%- if distance == 0 and not dirty -%}
        {{ serialize_pep440(base, stage, revision) }}
    {%- elif revision is not none -%}
        {{ serialize_pep440(base, stage, revision + 1, dev=distance, metadata=[commit]) }}{{ dirty_postfix }}
    {%- else -%}
        {{ serialize_pep440(bump_version(base), stage, revision, dev=distance, metadata=[commit]) }}{{ dirty_postfix }}
    {%- endif -%}
"""

[tool.poetry-dynamic-versioning.substitution]
files = [
    "hive/_version.py",
]


[tool.black]
line-length = 120
skip-string-normalization = true
