[metadata]
name = hivemind
url = https://gitlab.syncad.com/hive/hivemind
description = Developer-friendly microservice powering social networks on the Hive blockchain.
long_description = file: README.md, LICENSE


[options]
packages = find:
python_requires = >=3.8
install_requires =
    aiopg == 1.3.4
    jsonrpcserver == 4.2.0
    simplejson == 3.17.6
    aiohttp == 3.8.1
    certifi == 2022.6.15
    sqlalchemy == 1.4.49
    funcy == 1.17
    ujson == 5.4.0
    urllib3 == 1.26.10
    psycopg2-binary==2.9.3
    aiocache == 0.11.1
    configargparse == 1.5.3
    diff-match-patch == 20200713
    prometheus-client == 0.14.1
    psutil == 5.9.1
    atomic == 0.7.3
    cffi == 1.14.5
    gitpython == 3.1.27
    pytz == 2022.1


[options.extras_require]
dev =
    pyYAML == 6.0
    prettytable == 3.3.0
    black == 22.6.0

tests =
    tox == 3.25.0


[options.packages.find]
exclude =
    scripts
    scripts.*
    tests
    tests.*


[options.package_data]
hive = db/sql_scripts/**/*.sql


[options.entry_points]
console_scripts =
    hive = hive.cli:run
    mocker = hive.indexer.mocking.populate_haf_with_mocked_data:main
