[metadata]
name = hivemind
url = https://gitlab.syncad.com/hive/hivemind
description = Developer-friendly microservice powering social networks on the Hive blockchain.
long_description = file: README.md, LICENSE


[options]
packages = find:
python_requires = >=3.9
install_requires =
    aiopg == 1.4.0
    jsonrpcserver == 5.0.9
    simplejson == 3.19.3
    aiohttp == 3.11.11
    certifi == 2024.8.30
    sqlalchemy == 2.0.36
    funcy == 2.0
    ujson == 5.10.0
    urllib3 == 2.2.3
    psycopg2-binary == 2.9.10
    aiocache == 0.12.3
    configargparse == 1.7
    diff-match-patch == 20230430
    prometheus-client == 0.21.1
    psutil == 6.1.0
    cffi == 1.17.1
    gitpython == 3.1.43
    pytz == 2024.2


[options.extras_require]
dev =
    pyYAML == 6.0.2
    prettytable == 3.12.0
    black == 24.10.0

tests =
    tox == 4.23.2


[options.packages.find]
exclude =
    scripts
    scripts.*
    tests
    tests.*


[options.package_data]
hive = db/sql_scripts/**/*.sql


[options.entry_points]
console_scripts =
    hive = hive.cli:run
    mocker = hive.indexer.mocking.populate_haf_with_mocked_data:main
