[build-system]
requires = [
    "poetry-core>=1.7.0",
    "poetry-dynamic-versioning>=1.0.0,<2.0.0",
]
build-backend = "poetry_dynamic_versioning.backend"


[tool.poetry]
name = "hivemind_api"
version = "0.0.0"
description = ""
authors = []
package-mode=true

packages = [
    { include = "hivemind_api" },
]
include = [
    { path =  "hivemind_api/*", format = ["wheel", "sdist"] },
    { path =  "hivemind_api/hivemind_api_client/*", format = ["wheel", "sdist"] },
]
source = [
    { name = "PyPI", priority = "primary" },
    { name = "gitlab-schemas", url = "https://gitlab.syncad.com/api/v4/projects/362/packages/pypi/simple", priority = "supplemental" },
    { name = "gitlab-beekeepy", url = "https://gitlab.syncad.com/api/v4/projects/434/packages/pypi/simple", priority = "supplemental" },
    { name = "gitlab-api_client_generator", url = "https://gitlab.syncad.com/api/v4/projects/484/packages/pypi/simple", priority = "supplemental" },
]

[tool.poetry.dependencies]
python = "^3.12"
beekeepy="0.0.1.dev413+0bc0d4b"
api_client_generator = "1.3.1.dev16+d620eb1"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.5"
pytest-asyncio = "0.25.3"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.poetry-dynamic-versioning]
enable = true
pattern = '''^v?(?P<base>\d+\.\d+\.\d+)(?:(?P<stage>[a-zA-Z]+)(?P<revision>\d+))?$'''
format-jinja = """
    {%- set dirty_postfix = '.dirty' if dirty else '' -%}
    {%- if distance == 0 and not dirty -%}
        {{ serialize_pep440(base, stage, revision) }}
    {%- elif revision is not none -%}
        {{ serialize_pep440(base, stage, revision + 1, dev=distance, metadata=[commit]) }}{{ dirty_postfix }}
    {%- else -%}
        {{ serialize_pep440(bump_version(base), stage, revision, dev=distance, metadata=[commit]) }}{{ dirty_postfix }}
    {%- endif -%}
"""

[tool.poetry-dynamic-versioning.substitution]
files = [
    "hivemind_api/__init__.py",
]