[build-system]
requires = [
    "poetry-core>=1.7.0",
    "poetry-dynamic-versioning>=1.0.0,<2.0.0",
]
build-backend = "poetry_dynamic_versioning.backend"


[tool.poetry]
name = "hivemind_api"
version = "0.0.0"
description = ""
authors = []
package-mode=true

packages = [
    { include = "hivemind_api" },
]
include = [
    { path =  "hivemind_api/*", format = ["wheel", "sdist"] },
    { path =  "hivemind_api/hivemind_api_client/*", format = ["wheel", "sdist"] },
]
source = [
    { name = "gitlab-hive", url = "https://gitlab.syncad.com/api/v4/groups/136/-/packages/pypi/simple", priority = "primary" },
]

[tool.poetry.dependencies]
python = ">=3.14,<4"
hiveio-beekeepy = ">=1.28.6"
api_client_generator = ">=1.7.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.5"
pytest-asyncio = ">=0.25.3"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.poetry-dynamic-versioning]
enable = true
pattern = '''^v?(?P<base>\d+\.\d+\.\d+)(?:(?P<stage>[a-zA-Z]+)(?P<revision>\d+))?$'''
format-jinja = """
    {%- set dirty_postfix = '.dirty' if dirty else '' -%}
    {%- if distance == 0 and not dirty -%}
        {{ serialize_pep440(base, stage, revision) }}
    {%- elif revision is not none -%}
        {{ serialize_pep440(base, stage, revision + 1, dev=distance, metadata=[commit]) }}{{ dirty_postfix }}
    {%- else -%}
        {{ serialize_pep440(bump_version(base), stage, revision, dev=distance, metadata=[commit]) }}{{ dirty_postfix }}
    {%- endif -%}
"""

[tool.poetry-dynamic-versioning.substitution]
files = [
    "hivemind_api/__init__.py",
]