[build-system]
requires = [
    "poetry-core>=1.7.0",
    "poetry-dynamic-versioning>=1.0.0,<2.0.0",
]
build-backend = "poetry_dynamic_versioning.backend"


[tool.poetry]
name = "hivemind_api"
version = "0.0.0"
description = ""
authors = []
package-mode=true

packages = [
    { include = "hivemind_api" },
]
include = [
    { path =  "hivemind_api/*", format = ["wheel", "sdist"] },
    { path =  "hivemind_api/hivemind_api_client/*", format = ["wheel", "sdist"] },
]
source = [
    { name = "PyPI", priority = "primary" },
    { name = "gitlab-hive", url = "https://gitlab.syncad.com/api/v4/groups/136/-/packages/pypi/simple", priority = "primary" },
]

[tool.poetry.dependencies]
python = ">=3.14,<4"
hiveio-beekeepy = ">=1.28.6"
api_client_generator = ">=1.7.1"
pydantic = ">=2.12.5"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.5"
pytest-asyncio = ">=0.25.3"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.poetry-dynamic-versioning]
enable = true
pattern = "default-unprefixed"
format-jinja = """
    {%- set STABLE_BRANCHES = ['develop', 'master', 'main'] -%}
    {%- set effective_branch = branch or env.get('CI_COMMIT_REF_NAME') -%}
    {%- set is_on_tag = distance == 0 -%}
    {%- set is_after_tag = distance > 0 -%}
    {%- set is_tag_checkout = branch is none and is_on_tag -%}
    {%- set is_stable = effective_branch in STABLE_BRANCHES or is_tag_checkout -%}
    {%- set is_feature_branch = is_after_tag and not is_stable -%}
    {%- set post = timestamp|int if is_after_tag else none -%}
    {%- set dev = 0 if is_feature_branch else none -%}
    {%- set local_parts = ['unstable'] if is_feature_branch else [] -%}
    {%- set local_parts = local_parts + ['dirty'] if dirty else local_parts -%}
    {{- serialize_pep440(base, stage, revision, post=post, dev=dev, metadata=local_parts) -}}
"""

[tool.poetry-dynamic-versioning.substitution]
files = [
    "hivemind_api/__init__.py",
]